--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 axum = "0.6.1"
 tokio = { version = "1.23.0", features = ["macros","rt-multi-thread"] }
+serde = {version="1.0.151",features=["derive"]}
