--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 axum = { version = "0.6.1", features = ["headers"] }
 tokio = { version = "1.23.0", features = ["macros","rt-multi-thread"] }
 serde = {version="1.0.151",features=["derive"]}
+tower-http = { version = "0.3.5", features = ["cors"] }
