--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde = {version="1.0.151",features=["derive"]}
 tower-http = { version = "0.3.5", features = ["cors"] }
 sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
 dotenvy = "0.15.6"
+validator = { version = "0.16.0", features = ["derive"] }
